tests/__fixtures__/validation-template/__typetests__/test-file-syntax-errors.tst.ts
// @tstyche-template

function getTestText() {
  return `import { expect, test } from "tstyche";
expect<string>().type.toBe<string>();
`;
}

export default getTestText(;
